# dcmrmel

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/dcmrmel/: dcmrmel.py
tests/: test_dcmrmel.py
